--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   
   <title>my website</title>
 <body bgcolor=orange>
-<h1>Html basics(make sure to turn the volume up)</h1>
+<h1>Html basics</h1>
      <a href="gold.jpg">
    <img src="gold.jpg" width="30%">
   </a>
@@ -73,7 +73,4 @@ Click me to display Date and Time.</button>
    
    
    
-   <!-- infinite troll -->   
-   <audio loop autoplay>
-  <source src="annoy.mp3" type="audio/mpeg">
-</audio>
+   
