--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   
   <title>my website</title>
+  body {
   background-image: url("gold.jpg");
+  }
 <body bgcolor=orange>
 <h1>Html basics</h1>
      <a href="gold.jpg">
