--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <html>
   
   <title>my website</title>
-  body {
-  background-image: url("gold.jpg");
-  }
+  background-image: url("gold.gif");
 <body bgcolor=orange>
 <h1>Html basics</h1>
      <a href="gold.jpg">
