--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
   
   <title>my website</title>
-  background-image: url("gold.gif");
+ body  {
+    background-image: url("gold.jpf");
+    background-color: #cccccc;
+}
 <body bgcolor=orange>
 <h1>Html basics</h1>
      <a href="gold.jpg">
