--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
-  
-  <title>my website</title>
- body  {
+  <head>
+  <style>
+    body  {
     background-image: url("gold.jpf");
     background-color: #cccccc;
 }
+  
+  <title>my website</title
 <body bgcolor=orange>
 <h1>Html basics</h1>
      <a href="gold.jpg">
