--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
   <style>
     body  {
-    background-image: url("gold.jpf");
+    background-image: url("gold.jpg");
     background-color: #cccccc;
 }
   
