--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
 <html>
   <head>
   <style>
-    body  {
-    background-image: url("gold.jpg");
-    background-color: #cccccc;
-}
-  
   <title>my website</title
 <body bgcolor=orange>
 <h1>Html basics</h1>
@@ -28,3 +23,10 @@ onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
 
 <p id="demo"></p>
+<html>
+  <head>
+  <style>
+    body  {
+    background-image: url("gold.jpg");
+    background-color: #cccccc;
+}
