--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <html>
   <head>
   <style>
-    body  {
-    background-image: url("gold.jpg");
-    background-color: #cccccc;
-} 
   <title>my website</title
 <body bgcolor=orange>
 <h1>Html basics</h1>
@@ -27,3 +23,10 @@ onclick="document.getElementById('demo').innerHTML = Date()">
 Click me to display Date and Time.</button>
 
 <p id="demo"></p>
+    
+<head>
+  <style>
+    body  {
+    background-image: url("gold.jpg");
+    background-color: #cccccc;
+} 
